--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,31 @@
     </head>
     <body>
 
+<header class="navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner">
+  <div class="container">
+    <div class="navbar-header">
+      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a href="./" class="navbar-brand">Allison Siegel</a>
+    </div>
+    <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
+      <ul class="nav navbar-nav">
+      <!-- LEFT NAVBAR -->
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li>
+          <a href="./about">About</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+</header>
+<main>
+
 <div class="container">
 
             <h1 class="title"><a href="/">{{ site.name }}</a></h1>
@@ -25,14 +50,15 @@
 
             <div class="contact">
               <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
+                <a href="https://github.com/yourusername">github.com/asiegel92</a><br />
               </p>
             </div>
 
           {{ content }}
 
 </div>
+
+</main>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://code.jquery.com/jquery.js"></script>
