--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,32 @@
+
+
 main {
-  margin: 50px;
+  margin: 100px;
   background: #999;
+  height : 10000px;
 }
+
+.navbar-fixed-top {
+  background-color: rgba(89,184,195,.8);
+
+  -webkit-box-shadow: 0px 2px 12px -2px rgba(0,0,0,.08);
+  -moz-box-shadow: 0px 2px 12px -2px rgba(0,0,0,.08);
+  box-shadow: 0px 2px 12px -2px rgba(0,0,0,.08);
+}
+
+a.navbar-brand {
+  color: white;  
+}
+a.navbar-brand:hover{
+  color: grey;  
+}
+
+.navbar-nav > li > a {
+  color: white;  
+}
+
+.nav > li > a:hover, .nav > li > a:focus {
+  color: grey;  
+  background-color: transparent;
+}
+
