adding basic project grid

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,46 +51,71 @@
 
 
 <!-- CAROUSEL -->
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-  </ol>
+<div class="carousel slide" data-ride="carousel">
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="..." alt="...">
+      <img src="/img/ALS_1282.jpg" class="img-responsive" alt="...">
       <div class="carousel-caption">
-        ...
+        <h4>THIS IS THE TITLE</h4>
+        <p>this is the description</p>
       </div>
     </div>
-    ...
+    <div class="item">
+      <img src="/img/ALS_1495.jpg" class="img-responsive" alt="...">
+            <div class="carousel-caption">
+        <h4>THIS IS THE TITLE</h4>
+        <p>this is the description</p>
+      </div>
+    </div>
+    <div class="item">
+      <img src="/img/ALS_1565.jpg" class="img-responsive" alt="...">
+            <div class="carousel-caption">
+        <h4>THIS IS THE TITLE</h4>
+        <p>this is the description</p>
+      </div>
+    </div> 
   </div>
 
-  <!-- Controls -->
-  <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-  </a>
-  <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-  </a>
 </div>
 
+<div id="project-grid" class="row">
+  
+  <div class="col-md-4">
+    <div class="content">1</div>
+  </div>
+  <div class="col-md-4">
+        <div class="content">1</div>
 
+  </div>
+  <div class="col-md-4">
+        <div class="content">1</div>
+  </div>
 
+  <div class="col-md-4">
+    <div class="content">1</div>
+  </div>
+  <div class="col-md-4">
+        <div class="content">1</div>
 
+  </div>
+  <div class="col-md-4">
+        <div class="content">1</div>
+  </div>
 
+  <div class="col-md-4">
+    <div class="content">1</div>
+  </div>
+  <div class="col-md-4">
+        <div class="content">1</div>
 
+  </div>
+  <div class="col-md-4">
+        <div class="content">1</div>
+  </div>
 
-
-            <div class="contact">
-              <p>
-                <a href="https://github.com/yourusername">github.com/asiegel92</a><br />
-              </p>
-            </div>
+</div>
 
           {{ content }}
 
