--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,9 @@
     <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
       <ul class="nav navbar-nav">
       <!-- LEFT NAVBAR -->
+        <li>
+          <a href="./about">Projects</a>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
