--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,12 +27,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="./" class="navbar-brand">Allison Siegel</a>
+      <a href="/" class="navbar-brand">Allison Siegel</a>
     </div>
     <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a href="./about">About</a>
+          <a href="/about">About</a>
         </li>
       </ul>
     </nav>
