--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,17 @@
 ---
 layout: default
 ---
-<h2>{{ page.title }}</h2>
-<p class="meta">{{ page.date | date_to_string }}</p>
 
-<div class="post">
-{{ content }}
+<div class="row">
+  <div class="col-sm-6 col-sm-offset-3">
+	
+	<img src="/images/ALS_1495.jpg" class="img-responsive" alt="...">
+	
+	<div class="post">
+  		<h1>{{ page.title }}</h1>
+
+		{{ content }}
+	</div>
+
+  </div>
 </div>
