fixing layouts and posts page images

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <div class="row">
   <div class="col-sm-6 col-sm-offset-3">
 	
-	<img src="/images/ALS_1495.jpg" class="img-responsive" alt="...">
+	<img src="/images/{{page.image}}" class="img-responsive" alt="...">
 	
 	<div class="post">
   		<h1>{{ page.title }}</h1>
