--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <link href='http://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
 
         <link rel="stylesheet" href="/css/bootstrap.min.css">
 
