--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,13 @@
+body {
+  font-family: 'Inconsolata', sans-serif;
+  font-weight: bold;
+}
+
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+  font-family: 'Inconsolata', sans-serif;
+  font-weight: bold;
+}
+
 main {
   margin-top: 100px;
   padding-right: 20dx;
@@ -35,6 +45,8 @@ a.navbar-brand:hover{
 .carousel-caption {
   left: 50px;
   text-align: left;
+  color: black;
+  text-shadow: none;
 }
 
 #project-grid .col-sm-4 {
