Working on the project pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,11 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
 
+	    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	    <script src="https://code.jquery.com/jquery.js"></script>
+	    <!-- Include all compiled plugins (below), or include individual files as needed -->
+	    <script src="/js/bootstrap.min.js"></script>
+
     </head>
     <body>
 
@@ -39,16 +44,12 @@
     </nav>
   </div>
 </header>
+
 <main>
 
 {{content}}
 
 </main>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
-
-    </body>
+</body>
 </html>
