--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,13 +4,46 @@ layout: default
 
 <div class="row">
   <div class="col-sm-6 col-sm-offset-3">
-	
-	<img src="/images/{{page.image}}" class="img-responsive" alt="...">
-	
-	<div class="post">
-  		<h1>{{ page.title }}</h1>
+	  <div class="post">
 
+		  <!-- CAROUSEL -->
+		  <div id="post-carousel" class="carousel slide" data-ride="carousel">
+			
+			<!-- INDICATORS -->
+		    <ol class="carousel-indicators">
+				{% for image in page.images %}
+		    	{% if forloop.index0 == 0 %}
+			    <li data-target="#post-carousel" data-slide-to="{{forloop.index0}}" class="active"></li>
+	  	    	{% else %}
+				<li data-target="#post-carousel" data-slide-to="{{forloop.index0}}"></li>
+	  	    	{% endif }%}
+				{% endfor %}
+			</ol>
+		    <!-- Wrapper for slides -->
+		    <div class="carousel-inner">
+
+		  	{% for image in page.images %}
+		  	    {% if forloop.index0 == 0 %}
+		  	    <div class="item active">
+		  	    {% else %}
+		  	    <div class="item">
+		  	    {% endif }%}
+		  	      <img src="/images/{{image}}" class="img-responsive" alt="">
+		  	      <div class="carousel-caption">
+		  	        <h2>{{image.title}}</h4>
+		  	        <p>{{image.desc}}</p>
+		  	      </div>
+		  	    </div>
+		  	{% endfor %}
+
+		    </div>
+			
+		  </div>
+
+  		<h1>{{ page.title }}</h1>
+		
 		{{ content }}
+		
 	</div>
 
   </div>
