adding margin to the bottom of the grid

--- a/css/main.css
+++ b/css/main.css
@@ -73,7 +73,7 @@ a.navbar-brand:hover{
 #project-grid .col-sm-4 {
   text-align: center;
   margin-top: 10px;
-  background-color: white;
+  margin-bottom: 10px;
 }
 
 
